--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "httpx>=0.25.0",
     "asyncpg>=0.28.0",
     "psycopg2-binary>=2.9.7",
+    "jinja2>=3.1.6",
 ]
 
 [project.optional-dependencies]
