--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "asyncpg>=0.28.0",
     "psycopg2-binary>=2.9.7",
     "jinja2>=3.1.6",
+    "requests>=2.32.3",
 ]
 
 [project.optional-dependencies]
