--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,52 @@
-version: '3'
+# version: '3'
 
 services:
   api:
     build: .
     ports:
-      - "8000:8000"
+      - "8001:8000"
     volumes:
       - .:/app
     environment:
       - POSTGRES_SERVER=db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=casa_digital_mcp
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=mcp_db
       - REDIS_HOST=redis
     depends_on:
       - db
       - redis
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - mcpnetwork
 
   db:
-    image: postgres:13
+    image: postgres:17
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=casa_digital_mcp
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=mcp_db
     ports:
-      - "5432:5432"
+      - "5435:5432"
+    networks:
+      - mcpnetwork
+
 
   redis:
     image: redis:6
     ports:
-      - "6379:6379"
+      - "6380:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - mcpnetwork
 
 volumes:
   postgres_data:
   redis_data:
+
+networks:
+  mcpnetwork:
+    driver: bridge  
