--- a/alembic.ini
+++ b/alembic.ini
@@ -64,7 +64,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 # sqlalchemy.url = postgresql://postgres:postgres@localhost/casa_digital_mcp
-sqlalchemy.url = postgresql://admin:admin@db:5432/mcp_db
+sqlalchemy.url = postgresql://admin:admin@localhost:5435/mcp_db
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
